--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,13 +3,13 @@ plugins {
 }
 
 android {
-    compileSdkVersion 30
-    buildToolsVersion "30.0.2"
+    compileSdkVersion 31
+    buildToolsVersion "30.0.3"
 
     defaultConfig {
         applicationId "com.muhindo.whatsappchat"
         minSdkVersion 23
-        targetSdkVersion 30
+        targetSdkVersion 31
         versionCode 1
         versionName "1.0"
 
@@ -29,23 +29,27 @@ android {
 }
 
 dependencies {
+    //third party dependencies -------------
+    implementation 'com.balysv:material-ripple:1.0.2'               // ripple effect
 
-    implementation 'androidx.appcompat:appcompat:1.2.0'
-    implementation 'com.google.android.material:material:1.3.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
+    implementation 'androidx.appcompat:appcompat:1.4.1'
+    implementation 'com.google.android.material:material:1.5.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
+    implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.1.0"
+
     testImplementation 'junit:junit:4.+'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
     implementation 'com.mikhaellopez:circularimageview:3.2.0'          // circle image view
 
 
     //room
-    implementation 'androidx.room:room-runtime:2.2.5'               //database
-    annotationProcessor 'androidx.room:room-compiler:2.2.5'
+    implementation 'androidx.room:room-runtime:2.4.2'               //database
+    annotationProcessor 'androidx.room:room-compiler:2.4.2'
 
 
     implementation 'com.squareup.retrofit2:retrofit:2.4.0'          //http library
-    implementation 'com.squareup.retrofit2:converter-gson:2.4.0'    //coverter
-    implementation 'com.balysv:material-ripple:1.0.2'               // ripple effect
+    implementation 'com.squareup.retrofit2:converter-gson:2.4.0'    //converter
+
 }
